fixed footer spacing on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,6 +703,7 @@ footer p {
 		#connect_with_me {
 			width: 100%;
 			margin-top: 40px;
+			margin-bottom: 40px;
 		}
 
 		footer {
